modified package.json to add homepage for deployment

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "connect-Four",
+  "name": "connect-four",
   "version": "0.1.0",
+  "homepage": "https://alexabush.github.io/connect-four/",
   "private": true,
   "dependencies": {
     "normalize.css": "^8.0.0",
@@ -14,9 +15,12 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
+    "gh-pages": "^2.0.1",
     "jest": "^23.1.0"
   }
 }
